--- a/index.html
+++ b/index.html
@@ -23,17 +23,24 @@
             <li>Ma - Vr 08:00 - 19:00</li>
             <li>Za - Zo 09:00 - 18:00</li>
         </ul>
+
+        <div class="col-md-6">
+            <button>
+            <span id="LiveClock"> </span>
+        </button>
+        </div>
     </div>
 
     <div class="col-md-6">
         <p>
-            Serious Business is nu geopend, u hebt nog # tijd om langs te komen! 
+            Serious Business is nu <span id="openclose"> </span>, u hebt nog # tijd om langs te komen! 
         </p>
     </div>
 </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="./javascript/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
